fix(Projects): fix project users alignment

--- a/src/app/modules/projects/projects.component.css
+++ b/src/app/modules/projects/projects.component.css
@@ -48,6 +48,7 @@
 
 .card-block {
     padding: 1.25rem;
+    display: flex;
     flex-direction: column;
 }
 
@@ -148,13 +149,18 @@
     margin-bottom: 20px;
 }
 
+.users {
+    margin-top: auto;
+    width: 150px;
+}
+
 
 /* DARK THEME */
 
 
 /* TODO WHITE ICON */
 
-#wrapper.dark-theme .no-project h4 {
+#wrapper.dark-theme .no-project h5 {
     color: #FFF;
 }
 
